Added a PredictiveDictionary based on an std::set.

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable (
     ${TARGET_NAME}
     TestsMain.cpp
     UnitTests/SimpleDictionaryT.cpp
+    UnitTests/PredictiveDictionaryT.cpp
     UnitTests/GridT.cpp
     UnitTests/BoggleT.cpp
 )
