Added a BoggleApplication class which handles command line arguments, generates a board, applies the algorithm & calculates score. Added a README.md & fixed some issues with the root CMakeLists

--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -3,6 +3,7 @@ set(TARGET_NAME boggle_game)
 add_executable(
     ${TARGET_NAME}
     Main.cpp
+    BoggleApplication.cpp
 )
 
 target_link_libraries(
